# python-kublo

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
apps/cabinet_api/: apps.py  managers.py  models.py  serializers.py  urls.py  views.py
apps/cabinet_api/migrations/: 0001_initial.py  0002_alter_customuser_username.py  0003_alter_customuser_username.py  0004_alter_customuser_managers_alter_customuser_username.py
apps/cabinet_api/serializers/: __init__.py  user.py
apps/cabinet_api/views/: __init__.py  token.py
core/: settings.py  urls.py
tests/cabinet_api/: test_registration.py  test_user_model.py
